# swig_cmake_example

./: .gitignore  README.md
callPartion/: CMakeLists.txt  example.cpp  example.h
callPartion/lib/: CMakeLists.txt  add.h
class/: example.h  example.i  test.py
exception/: CMakeLists.txt  example.h  example.i  test.py
extendClass/: CMakeLists.txt  example.h  example.i  test.py
pointer/: example.cpp  example.h  example.i  test.py
reference/: example.cpp  example.h  example.i
template/: example.h  example.i  test.py
